<resources>
    <string name="app_name">Donation 2.0</string>
    <string name="action_settings">Setting</string>
    <string name="donateTitle">Hello, dude)</string>
    <string name="donateSubTitle">"Donate pls some money fot our project [Clear Ukraine]"</string>
    <string name="donateButton">Donate</string>
    <string name="RadioButton">BitCoin</string>
    <string name="RadioButton1">Cash</string>
    <string name="textMoney">MONEY</string>
    <string name="total">TOTAL</string>
    <string name="menuReport">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="reportTitle1">Reports</string>

    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
</resources>
